--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				</div>
 				<div class="nav-menu" id="nav-menu">
 					<ul>
-						<li>
+						<li class="active">
 							<a href="#home" class="active">Home</a>
 						</li>
 						<li>
@@ -34,7 +34,7 @@
 							<a href="#apartments">Apartments</a>
 						</li>
 						<li>
-							<a href="#villas">villas</a>
+							<a href="#villas">Villas</a>
 						</li>
 						<li>
 							<a href="#location">Location</a>
@@ -56,46 +56,26 @@
 				</div>
 			</div>
 		</nav>
-		<!-- <nav class="nav">
-			<div class="container">
-				<div class="logo">
-					<a href="index.html" class="navar-brand">AU<span>.</span></a>
-				</div>
+		<!-- End Navbar -->
 
-				<div class="nav-inner">
-					<div class="list-conatiner">
-						<ul>
-							<li>
-								<a href="#home" class="active">Home</a>
-							</li>
-							<li>
-								<a href="#about">About</a>
-							</li>
-							<li>
-								<a href="#apartments">Apartments</a>
-							</li>
-							<li>
-								<a href="#villas">villas</a>
-							</li>
-							<li>
-								<a href="#location">Location</a>
-							</li>
-							<li>
-								<a href="#location">Contact US</a>
-							</li>
-						</ul>
+		<!-- Start Hero -->
+		<div class="header">
+			<div class="wrapper">
+				<div class="container">
+					<div class="row">
+						<div class="col-md-8">
+							<h1>
+								Find Your Dream Apartment and Villa in <span>Hartland</span>
+							</h1>
+						</div>
 					</div>
-
-					<div class="nav-num">
-						<a class="number" href="tel:+999999999">+999 999 999</a>
-						<a class="whatsapp" href="https://wa.me/999999999" target="_blank">
-							<i class="fab fa-whatsapp"></i>
-						</a>
-					</div>
+					<button>
+						<i class="fas fa-angle-down"></i>
+					</button>
 				</div>
 			</div>
-		</nav> -->
-		<!-- End Navbar -->
+		</div>
+		<!-- End Hero -->
 
 		<!-- Javascript -->
 		<script src="./assets/js/jquery-3.4.1.min.js"></script>
