--- a/index.html
+++ b/index.html
@@ -75,7 +75,11 @@
 				</div>
 			</div>
 		</div>
-		<!-- End Hero -->
+    <!-- End Hero -->
+    
+    <!-- Start About -->
+    sectio
+    <!-- End About -->
 
 		<!-- Javascript -->
 		<script src="./assets/js/jquery-3.4.1.min.js"></script>
