--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<!-- Css -->
 		<link rel="stylesheet" href="./assets/css/fontawesome-all.css" />
 		<link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
+		<link rel="stylesheet" href="./assets/css/glider.min.css" />
 		<link rel="stylesheet" href="./assets/css/style.css" />
 	</head>
 	<body>
@@ -70,19 +71,101 @@
 						</div>
 					</div>
 					<button>
-						<i class="fas fa-angle-down"></i>
+						<span>
+							<i class="fas fa-angle-down"></i>
+						</span>
 					</button>
 				</div>
 			</div>
 		</div>
-    <!-- End Hero -->
-    
-    <!-- Start About -->
-    sectio
-    <!-- End About -->
+		<!-- End Hero -->
+
+		<!-- Start About -->
+		<section class="about">
+			<div class="container">
+				<div class="heading">
+					<h3>
+						About
+						<p><span> H</span>artland</p>
+					</h3>
+				</div>
+				<div class="row">
+					<div class="col-md-6">
+						<p>
+							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet,
+							corporis quibusdam tempora unde magni quam omnis ex incidunt
+							recusandae adipisci vitae maxime natus quas distinctio mollitia
+							suscipit! Facilis, unde deserunt?
+						</p>
+						<p>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus
+							odit voluptas, sit dolorem laboriosam sequi maxime
+						</p>
+					</div>
+					<div class="col-md-6">
+						<div class="images">
+							<img src="./assets/img/about/1.jpg" alt="" />
+							<img src="./assets/img/about/2.jpg" alt="" />
+							<img src="./assets/img/about/3.jpg" alt="" />
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- End About -->
+
+		<!-- Start Carousel Video -->
+		<div class="glider-contain">
+			<button class="glider-prev">
+				<i class="fas fa-angle-left"></i>
+			</button>
+
+			<div class="glider">
+				<div class="video-container">
+					<video width="100%" height="600px" controls>
+						<source
+							src="./assets/videos/Hartland Estates - Product Video.mp4"
+							type="video/mp4"
+						/>
+					</video>
+				</div>
+				<div class="video-container">
+					<video width="100%" height="600px" controls>
+						<source
+							src="./assets/videos/internationl schools in SH.mp4"
+							type="video/mp4"
+						/>
+					</video>
+				</div>
+				<div class="video-container">
+					<video width="100%" height="600px" controls>
+						<source
+							src="./assets/videos/views from estate SH.mp4"
+							type="video/mp4"
+						/>
+					</video>
+				</div>
+				<div class="video-container">
+					<video width="100%" height="600px" controls>
+						<source
+							src="./assets/videos/sevices facilities with canal view SH.mp4"
+							type="video/mp4"
+						/>
+					</video>
+				</div>
+			</div>
+
+			<button class="glider-next">
+				<i class="fas fa-angle-right"></i>
+			</button>
+		</div>
+
+		
+		<!-- End Carousel Video -->
 
 		<!-- Javascript -->
 		<script src="./assets/js/jquery-3.4.1.min.js"></script>
+		<script src="./assets/js/glider.min.js"></script>
 		<script src="./assets/js/bootstrap.min.js"></script>
 		<script src="./assets/js/main.js"></script>
 	</body>
