--- a/index.html
+++ b/index.html
@@ -122,36 +122,44 @@
 
 			<div class="glider">
 				<div class="video-container">
-					<video width="100%" height="600px" controls>
-						<source
-							src="./assets/videos/Hartland Estates - Product Video.mp4"
-							type="video/mp4"
-						/>
-					</video>
+					<iframe
+						width="100%"
+						height="600"
+						src="https://www.youtube.com/embed/VZirU-hPqCY"
+						frameborder="0"
+						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+						allowfullscreen
+					></iframe>
 				</div>
 				<div class="video-container">
-					<video width="100%" height="600px" controls>
-						<source
-							src="./assets/videos/internationl schools in SH.mp4"
-							type="video/mp4"
-						/>
-					</video>
+					<iframe
+						width="100%"
+						height="600"
+						src="https://www.youtube.com/embed/HoTlJQfF2DA"
+						frameborder="0"
+						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+						allowfullscreen
+					></iframe>
 				</div>
 				<div class="video-container">
-					<video width="100%" height="600px" controls>
-						<source
-							src="./assets/videos/views from estate SH.mp4"
-							type="video/mp4"
-						/>
-					</video>
+					<iframe
+						width="100%"
+						height="600"
+						src="https://www.youtube.com/embed/Pv7c2Fywjqg"
+						frameborder="0"
+						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+						allowfullscreen
+					></iframe>
 				</div>
 				<div class="video-container">
-					<video width="100%" height="600px" controls>
-						<source
-							src="./assets/videos/sevices facilities with canal view SH.mp4"
-							type="video/mp4"
-						/>
-					</video>
+					<iframe
+						width="100%"
+						height="600"
+						src="https://www.youtube.com/embed/1oSZG9R9gV4"
+						frameborder="0"
+						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+						allowfullscreen
+					></iframe>
 				</div>
 			</div>
 
@@ -205,17 +213,17 @@
 								<button class="glider-cont-prev2 glider-prev2">
 									<i class="fas fa-angle-left"></i>
 								</button>
-								<div class="glider2">
-									<div class="img-container">
+								<div class="glider2 gliderG">
+									<div class="img-content">
 										<img src="./assets/img/about/1.jpg" alt="" />
 									</div>
-									<div class="img-container">
+									<div class="img-content">
 										<img src="./assets/img/about/2.jpg" alt="" />
 									</div>
-									<div class="img-container">
+									<div class="img-content">
 										<img src="./assets/img/about/3.jpg" alt="" />
 									</div>
-									<div class="img-container">
+									<div class="img-content">
 										<img src="./assets/img/about/1.jpg" alt="" />
 									</div>
 								</div>
@@ -266,17 +274,17 @@
 								<button class="glider-cont-prev2 glider-prev3">
 									<i class="fas fa-angle-left"></i>
 								</button>
-								<div class="glider3">
-									<div class="img-container">
+								<div class="glider3 gliderG">
+									<div class="img-content">
 										<img src="./assets/img/about/1.jpg" alt="" />
 									</div>
-									<div class="img-container">
+									<div class="img-content">
 										<img src="./assets/img/about/2.jpg" alt="" />
 									</div>
-									<div class="img-container">
+									<div class="img-content">
 										<img src="./assets/img/about/3.jpg" alt="" />
 									</div>
-									<div class="img-container">
+									<div class="img-content">
 										<img src="./assets/img/about/1.jpg" alt="" />
 									</div>
 								</div>
@@ -319,6 +327,7 @@
 							</div>
 						</div>
 					</div>
+
 					<!-- Third Apartment -->
 					<div class="item apartment">
 						<div class="img-container">
@@ -326,17 +335,17 @@
 								<button class="glider-cont-prev2 glider-prev4">
 									<i class="fas fa-angle-left"></i>
 								</button>
-								<div class="glider4">
-									<div class="img-container">
+								<div class="glider4 gliderG">
+									<div class="img-content">
 										<img src="./assets/img/about/1.jpg" alt="" />
 									</div>
-									<div class="img-container">
+									<div class="img-content">
 										<img src="./assets/img/about/2.jpg" alt="" />
 									</div>
-									<div class="img-container">
+									<div class="img-content">
 										<img src="./assets/img/about/3.jpg" alt="" />
 									</div>
-									<div class="img-container">
+									<div class="img-content">
 										<img src="./assets/img/about/1.jpg" alt="" />
 									</div>
 								</div>
@@ -379,6 +388,7 @@
 							</div>
 						</div>
 					</div>
+
 					<!-- Fourth Apartment -->
 					<div class="item apartment">
 						<div class="img-container">
@@ -386,17 +396,17 @@
 								<button class="glider-cont-prev2 glider-prev5">
 									<i class="fas fa-angle-left"></i>
 								</button>
-								<div class="glider5">
-									<div class="img-container">
+								<div class="glider5 gliderG">
+									<div class="img-content">
 										<img src="./assets/img/about/1.jpg" alt="" />
 									</div>
-									<div class="img-container">
+									<div class="img-content">
 										<img src="./assets/img/about/2.jpg" alt="" />
 									</div>
-									<div class="img-container">
+									<div class="img-content">
 										<img src="./assets/img/about/3.jpg" alt="" />
 									</div>
-									<div class="img-container">
+									<div class="img-content">
 										<img src="./assets/img/about/1.jpg" alt="" />
 									</div>
 								</div>
@@ -439,6 +449,7 @@
 							</div>
 						</div>
 					</div>
+
 					<!-- Fifth Apartment -->
 					<div class="item apartment">
 						<div class="img-container">
@@ -446,17 +457,17 @@
 								<button class="glider-cont-prev2 glider-prev6">
 									<i class="fas fa-angle-left"></i>
 								</button>
-								<div class="glider6">
-									<div class="img-container">
+								<div class="glider6 gliderG">
+									<div class="img-content">
 										<img src="./assets/img/about/1.jpg" alt="" />
 									</div>
-									<div class="img-container">
+									<div class="img-content">
 										<img src="./assets/img/about/2.jpg" alt="" />
 									</div>
-									<div class="img-container">
+									<div class="img-content">
 										<img src="./assets/img/about/3.jpg" alt="" />
 									</div>
-									<div class="img-container">
+									<div class="img-content">
 										<img src="./assets/img/about/1.jpg" alt="" />
 									</div>
 								</div>
@@ -502,9 +513,10 @@
 				</div>
 			</div>
 		</div>
-		<!-- Start End -->
-		<!-- Start Apartments -->
-		<div class="apartments" id="villas">
+		<!-- End Apartments -->
+
+		<!-- Start Villas -->
+		<div class="villas" id="villas" id="villas">
 			<div class="container">
 				<div class="heading">
 					<h3>Villas</h3>
@@ -512,52 +524,52 @@
 
 				<div class="category-list">
 					<ul>
-						<li class="active">
-							<i class="fas fa-home" data-value="2"></i>
+						<li class="active" data-value="2">
+							<i class="fas fa-home"></i>
 							<p>2 Rooms</p>
 						</li>
-						<li>
-							<i class="fas fa-home" data-value="3"></i>
+						<li data-value="3">
+							<i class="fas fa-home"></i>
 							<p>3 Rooms</p>
 						</li>
-						<li>
-							<i class="fas fa-home" data-value="4"></i>
+						<li data-value="4">
+							<i class="fas fa-home"></i>
 							<p>4 Rooms</p>
 						</li>
-						<li>
-							<i class="fas fa-home" data-value="5"></i>
+						<li data-value="5">
+							<i class="fas fa-home"></i>
 							<p>5 Rooms</p>
 						</li>
-						<li>
-							<i class="fas fa-home" data-value="6"></i>
+						<li data-value="6">
+							<i class="fas fa-home"></i>
 							<p>6 Rooms</p>
 						</li>
-						<li>
-							<i class="fas fa-home" data-value="7"></i>
+						<li data-value="7">
+							<i class="fas fa-home"></i>
 							<p>7 Rooms</p>
 						</li>
 					</ul>
 				</div>
 
 				<div class="category-items">
-					<!-- First Apartment -->
-					<div class="item apartment">
+					<!-- First Villa -->
+					<div class="item villa">
 						<div class="img-container">
 							<div class="glider-contain">
 								<button class="glider-cont-prev2 glider-prev7">
 									<i class="fas fa-angle-left"></i>
 								</button>
-								<div class="glider7">
-									<div class="img-container">
+								<div class="glider7 gliderG">
+									<div class="img-content">
 										<img src="./assets/img/about/1.jpg" alt="" />
 									</div>
-									<div class="img-container">
+									<div class="img-content">
 										<img src="./assets/img/about/2.jpg" alt="" />
 									</div>
-									<div class="img-container">
+									<div class="img-content">
 										<img src="./assets/img/about/3.jpg" alt="" />
 									</div>
-									<div class="img-container">
+									<div class="img-content">
 										<img src="./assets/img/about/1.jpg" alt="" />
 									</div>
 								</div>
@@ -568,12 +580,73 @@
 							</div>
 						</div>
 						<div class="item-desc">
-							<h4 class="appart-name">First Appartment</h4>
-							<h5 class="price">1,700,000$</h5>
+							<h4 class="appart-name">First Villa</h4>
+							<h5 class="price">7,700,000$</h5>
 							<div class="info">
 								<div class="rooms">
 									<i class="fas fa-home"></i>
-									<p>4 Rooms</p>
+									<p>2 Rooms</p>
+								</div>
+								<div class="baths">
+									<i class="fas fa-bath"></i>
+									<p>4 Baths</p>
+								</div>
+								<div class="size">
+									<i class="fas fa-exchange-alt"></i>
+									<p>2,500 SqFt</p>
+								</div>
+							</div>
+							<div class="location">
+								<i class="fas fa-map-marker-alt"></i>
+								<p>The Emirats, Dubai</p>
+							</div>
+							<div class="buttons">
+								<button class="watch">
+									<i class="far fa-play-circle"></i>
+									Watch
+								</button>
+								<button class="call">
+									<i class="fas fa-phone-alt"></i>
+									Call
+								</button>
+							</div>
+						</div>
+					</div>
+
+					<!-- Second Villa -->
+					<div class="item villa">
+						<div class="img-container">
+							<div class="glider-contain">
+								<button class="glider-cont-prev2 glider-prev8">
+									<i class="fas fa-angle-left"></i>
+								</button>
+								<div class="glider8 gliderG">
+									<div class="img-content">
+										<img src="./assets/img/about/1.jpg" alt="" />
+									</div>
+									<div class="img-content">
+										<img src="./assets/img/about/2.jpg" alt="" />
+									</div>
+									<div class="img-content">
+										<img src="./assets/img/about/3.jpg" alt="" />
+									</div>
+									<div class="img-content">
+										<img src="./assets/img/about/1.jpg" alt="" />
+									</div>
+								</div>
+								<button class="glider-next8 glider-cont-next2">
+									<i class="fas fa-angle-right"></i>
+								</button>
+								<div id="dots6" class="glider-dots"></div>
+							</div>
+						</div>
+						<div class="item-desc">
+							<h4 class="appart-name">Second Villa</h4>
+							<h5 class="price">9,200,000$</h5>
+							<div class="info">
+								<div class="rooms">
+									<i class="fas fa-home"></i>
+									<p>5 Rooms</p>
 								</div>
 								<div class="baths">
 									<i class="fas fa-bath"></i>
@@ -601,84 +674,24 @@
 						</div>
 					</div>
 
-					<!-- Second Apartment -->
-					<div class="item apartment">
-						<div class="img-container">
-							<div class="glider-contain">
-								<button class="glider-cont-prev2 glider-prev8">
-									<i class="fas fa-angle-left"></i>
-								</button>
-								<div class="glider8">
-									<div class="img-container">
-										<img src="./assets/img/about/1.jpg" alt="" />
-									</div>
-									<div class="img-container">
-										<img src="./assets/img/about/2.jpg" alt="" />
-									</div>
-									<div class="img-container">
-										<img src="./assets/img/about/3.jpg" alt="" />
-									</div>
-									<div class="img-container">
-										<img src="./assets/img/about/1.jpg" alt="" />
-									</div>
-								</div>
-								<button class="glider-next8 glider-cont-next2">
-									<i class="fas fa-angle-right"></i>
-								</button>
-								<div id="dots6" class="glider-dots"></div>
-							</div>
-						</div>
-						<div class="item-desc">
-							<h4 class="appart-name">Second Appartment</h4>
-							<h5 class="price">1,700,000$</h5>
-							<div class="info">
-								<div class="rooms">
-									<i class="fas fa-home"></i>
-									<p>4 Rooms</p>
-								</div>
-								<div class="baths">
-									<i class="fas fa-bath"></i>
-									<p>2 Baths</p>
-								</div>
-								<div class="size">
-									<i class="fas fa-exchange-alt"></i>
-									<p>2,500 SqFt</p>
-								</div>
-							</div>
-							<div class="location">
-								<i class="fas fa-map-marker-alt"></i>
-								<p>The Emirats, Dubai</p>
-							</div>
-							<div class="buttons">
-								<button class="watch">
-									<i class="far fa-play-circle"></i>
-									Watch
-								</button>
-								<button class="call">
-									<i class="fas fa-phone-alt"></i>
-									Call
-								</button>
-							</div>
-						</div>
-					</div>
-					<!-- Third Apartment -->
-					<div class="item apartment">
+					<!-- Third Villa -->
+					<div class="item villa">
 						<div class="img-container">
 							<div class="glider-contain">
 								<button class="glider-cont-prev2 glider-prev9">
 									<i class="fas fa-angle-left"></i>
 								</button>
-								<div class="glider9">
-									<div class="img-container">
+								<div class="glider9 gliderG">
+									<div class="img-content">
 										<img src="./assets/img/about/1.jpg" alt="" />
 									</div>
-									<div class="img-container">
+									<div class="img-content">
 										<img src="./assets/img/about/2.jpg" alt="" />
 									</div>
-									<div class="img-container">
+									<div class="img-content">
 										<img src="./assets/img/about/3.jpg" alt="" />
 									</div>
-									<div class="img-container">
+									<div class="img-content">
 										<img src="./assets/img/about/1.jpg" alt="" />
 									</div>
 								</div>
@@ -689,12 +702,12 @@
 							</div>
 						</div>
 						<div class="item-desc">
-							<h4 class="appart-name">Third Appartment</h4>
-							<h5 class="price">1,700,000$</h5>
+							<h4 class="appart-name">Third Villa</h4>
+							<h5 class="price">2,500,000$</h5>
 							<div class="info">
 								<div class="rooms">
 									<i class="fas fa-home"></i>
-									<p>4 Rooms</p>
+									<p>2 Rooms</p>
 								</div>
 								<div class="baths">
 									<i class="fas fa-bath"></i>
@@ -721,24 +734,25 @@
 							</div>
 						</div>
 					</div>
-					<!-- Fourth Apartment -->
-					<div class="item apartment">
+
+					<!-- Fourth Villa -->
+					<div class="item villa">
 						<div class="img-container">
 							<div class="glider-contain">
 								<button class="glider-cont-prev2 glider-prev10">
 									<i class="fas fa-angle-left"></i>
 								</button>
-								<div class="glider10">
-									<div class="img-container">
+								<div class="glider10 gliderG">
+									<div class="img-content">
 										<img src="./assets/img/about/1.jpg" alt="" />
 									</div>
-									<div class="img-container">
+									<div class="img-content">
 										<img src="./assets/img/about/2.jpg" alt="" />
 									</div>
-									<div class="img-container">
+									<div class="img-content">
 										<img src="./assets/img/about/3.jpg" alt="" />
 									</div>
-									<div class="img-container">
+									<div class="img-content">
 										<img src="./assets/img/about/1.jpg" alt="" />
 									</div>
 								</div>
@@ -749,12 +763,12 @@
 							</div>
 						</div>
 						<div class="item-desc">
-							<h4 class="appart-name">Fourth Appartment</h4>
-							<h5 class="price">1,700,000$</h5>
+							<h4 class="appart-name">Fourth Villa</h4>
+							<h5 class="price">1,400,100$</h5>
 							<div class="info">
 								<div class="rooms">
 									<i class="fas fa-home"></i>
-									<p>4 Rooms</p>
+									<p>3 Rooms</p>
 								</div>
 								<div class="baths">
 									<i class="fas fa-bath"></i>
@@ -781,24 +795,25 @@
 							</div>
 						</div>
 					</div>
-					<!-- Fifth Apartment -->
-					<div class="item apartment">
+
+					<!-- Fifth Villa -->
+					<div class="item villa">
 						<div class="img-container">
 							<div class="glider-contain">
 								<button class="glider-cont-prev2 glider-prev11">
 									<i class="fas fa-angle-left"></i>
 								</button>
-								<div class="glider11">
-									<div class="img-container">
+								<div class="glider11 gliderG">
+									<div class="img-content">
 										<img src="./assets/img/about/1.jpg" alt="" />
 									</div>
-									<div class="img-container">
+									<div class="img-content">
 										<img src="./assets/img/about/2.jpg" alt="" />
 									</div>
-									<div class="img-container">
+									<div class="img-content">
 										<img src="./assets/img/about/3.jpg" alt="" />
 									</div>
-									<div class="img-container">
+									<div class="img-content">
 										<img src="./assets/img/about/1.jpg" alt="" />
 									</div>
 								</div>
@@ -809,8 +824,8 @@
 							</div>
 						</div>
 						<div class="item-desc">
-							<h4 class="appart-name">Fifth Appartment</h4>
-							<h5 class="price">1,700,000$</h5>
+							<h4 class="appart-name">Fifth Villa</h4>
+							<h5 class="price">1,200,000$</h5>
 							<div class="info">
 								<div class="rooms">
 									<i class="fas fa-home"></i>
@@ -844,7 +859,62 @@
 				</div>
 			</div>
 		</div>
-		<!-- Start End -->
+		<!-- Start Villas -->
+
+		<!-- Start Location -->
+		<div class="locationSec" id="location">
+			<div class="container">
+				<div class="heading">
+					<h3>Location</h3>
+				</div>
+				<div class="img-wrapper">
+					<img
+						src="./assets/img/locution SH.jpeg"
+						loading="lazy"
+						alt="location-img"
+					/>
+				</div>
+			</div>
+		</div>
+		<!-- End Location -->
+
+		<!-- Start Footer -->
+		<footer class="footer">
+			<div class="container">
+				<div class="heading">
+					<h3>Contact Us</h3>
+				</div>
+				<div class="row">
+					<div class="col-md-6">
+						<div class="phone-contact">
+							<a href="tel:+9999999" class="num-footer">+99 999 999 9</a>
+							<a href="tel:+9999999" class="call">
+								<i class="fas fa-phone-alt"></i>
+								Call
+							</a>
+							<a href="https://wa.me/999999999" class="whats-footer"
+								><i class="fab fa-whatsapp"></i
+							></a>
+						</div>
+						<p>
+							We treat your personal information as confidential and will handle
+							it in accordance with data protection legislation as well as with
+							the terms of this statement. It is in principal possible to use
+							our website without providing any personal information.
+						</p>
+					</div>
+					<div class="col-md-6 contact-form">
+						<h5>Get a Call back</h5>
+						<form>
+							<input type="text" placeholder="Full Name" />
+							<input type="tel" name="number" placeholder="Number" />
+							<button type="submit">Get a Call back</button>
+						</form>
+					</div>
+				</div>
+			</div>
+		</footer>
+		<!-- End Footer -->
 
 		<!-- Javascript -->
 		<script src="./assets/js/jquery-3.4.1.min.js"></script>
