--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<!-- Css -->
 		<link rel="stylesheet" href="./assets/css/fontawesome-all.css" />
 		<link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
+		<link rel="stylesheet" href="./assets/css/animate.css" />
 		<link rel="stylesheet" href="./assets/css/glider.min.css" />
 		<link rel="stylesheet" href="./assets/css/style.css" />
 	</head>
@@ -25,7 +26,7 @@
 				</div>
 				<div class="nav-menu" id="nav-menu">
 					<ul>
-						<li class="active">
+						<li>
 							<a href="#home" class="active">Home</a>
 						</li>
 						<li>
@@ -41,7 +42,7 @@
 							<a href="#location">Location</a>
 						</li>
 						<li>
-							<a href="#location">Contact US</a>
+							<a href="#contact-us">Contact US</a>
 						</li>
 						<li class="nav-num">
 							<a class="number" href="tel:+999999999">+999 999 999</a>
@@ -60,11 +61,11 @@
 		<!-- End Navbar -->
 
 		<!-- Start Hero -->
-		<div class="header">
+		<div class="header" id="home">
 			<div class="wrapper">
 				<div class="container">
 					<div class="row">
-						<div class="col-md-8">
+						<div class="col-md-8 wow fadeInUp">
 							<h1>
 								Find Your Dream Apartment and Villa in <span>Hartland</span>
 							</h1>
@@ -83,14 +84,14 @@
 		<!-- Start About -->
 		<section class="about" id="about">
 			<div class="container">
-				<div class="heading">
+				<div class="heading wow fadeInUp">
 					<h3>
 						About
 						<p><span> H</span>artland</p>
 					</h3>
 				</div>
 				<div class="row">
-					<div class="col-md-6">
+					<div class="col-md-6 wow bounceInLeft">
 						<p>
 							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet,
 							corporis quibusdam tempora unde magni quam omnis ex incidunt
@@ -102,7 +103,7 @@
 							odit voluptas, sit dolorem laboriosam sequi maxime
 						</p>
 					</div>
-					<div class="col-md-6">
+					<div class="col-md-6 wow bounceInRight">
 						<div class="images">
 							<img src="./assets/img/about/1.jpg" alt="" />
 							<img src="./assets/img/about/2.jpg" alt="" />
@@ -178,7 +179,7 @@
 
 				<div class="category-list">
 					<ul>
-						<li class="active">
+						<li class="active wow fadeInUp">
 							<i class="fas fa-home" data-value="2"></i>
 							<p>2 Rooms</p>
 						</li>
@@ -207,7 +208,7 @@
 
 				<div class="category-items">
 					<!-- First Apartment -->
-					<div class="item apartment">
+					<div class="item apartment wow bounceInLeft">
 						<div class="img-container">
 							<div class="glider-contain">
 								<button class="glider-cont-prev2 glider-prev2">
@@ -268,7 +269,7 @@
 					</div>
 
 					<!-- Second Apartment -->
-					<div class="item apartment">
+					<div class="item apartment wow bounceInRight">
 						<div class="img-container">
 							<div class="glider-contain">
 								<button class="glider-cont-prev2 glider-prev3">
@@ -329,7 +330,7 @@
 					</div>
 
 					<!-- Third Apartment -->
-					<div class="item apartment">
+					<div class="item apartment wow bounceInLeft">
 						<div class="img-container">
 							<div class="glider-contain">
 								<button class="glider-cont-prev2 glider-prev4">
@@ -390,7 +391,7 @@
 					</div>
 
 					<!-- Fourth Apartment -->
-					<div class="item apartment">
+					<div class="item apartment wow bounceInRight">
 						<div class="img-container">
 							<div class="glider-contain">
 								<button class="glider-cont-prev2 glider-prev5">
@@ -451,7 +452,7 @@
 					</div>
 
 					<!-- Fifth Apartment -->
-					<div class="item apartment">
+					<div class="item apartment wow bounceInLeft">
 						<div class="img-container">
 							<div class="glider-contain">
 								<button class="glider-cont-prev2 glider-prev6">
@@ -516,7 +517,7 @@
 		<!-- End Apartments -->
 
 		<!-- Start Villas -->
-		<div class="villas" id="villas" id="villas">
+		<div class="villas" id="villas">
 			<div class="container">
 				<div class="heading">
 					<h3>Villas</h3>
@@ -553,7 +554,7 @@
 
 				<div class="category-items">
 					<!-- First Villa -->
-					<div class="item villa">
+					<div class="item villa wow bounceInRight">
 						<div class="img-container">
 							<div class="glider-contain">
 								<button class="glider-cont-prev2 glider-prev7">
@@ -614,7 +615,7 @@
 					</div>
 
 					<!-- Second Villa -->
-					<div class="item villa">
+					<div class="item villa wow bounceInLeft">
 						<div class="img-container">
 							<div class="glider-contain">
 								<button class="glider-cont-prev2 glider-prev8">
@@ -675,7 +676,7 @@
 					</div>
 
 					<!-- Third Villa -->
-					<div class="item villa">
+					<div class="item villa wow bounceInRight">
 						<div class="img-container">
 							<div class="glider-contain">
 								<button class="glider-cont-prev2 glider-prev9">
@@ -736,7 +737,7 @@
 					</div>
 
 					<!-- Fourth Villa -->
-					<div class="item villa">
+					<div class="item villa wow bounceInLeft">
 						<div class="img-container">
 							<div class="glider-contain">
 								<button class="glider-cont-prev2 glider-prev10">
@@ -797,7 +798,7 @@
 					</div>
 
 					<!-- Fifth Villa -->
-					<div class="item villa">
+					<div class="item villa wow bounceInRight">
 						<div class="img-container">
 							<div class="glider-contain">
 								<button class="glider-cont-prev2 glider-prev11">
@@ -879,7 +880,7 @@
 		<!-- End Location -->
 
 		<!-- Start Footer -->
-		<footer class="footer">
+		<footer class="footer" id="contact-us">
 			<div class="container">
 				<div class="heading">
 					<h3>Contact Us</h3>
@@ -918,6 +919,8 @@
 
 		<!-- Javascript -->
 		<script src="./assets/js/jquery-3.4.1.min.js"></script>
+		<script src="./assets/js/wow.min.js"></script>
+		t
 		<script src="./assets/js/glider.min.js"></script>
 		<script src="./assets/js/bootstrap.min.js"></script>
 		<script src="./assets/js/main.js"></script>
