--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 					</div>
 					<div class="col-md-6 wow bounceInRight">
 						<div class="images">
-							<img class="d-sm-none" src="./assets/img/about/1.jpg" alt="" />
-							<img class="d-sm-none" src="./assets/img/about/2.jpg" alt="" />
+							<img class="dsm0" src="./assets/img/about/1.jpg" alt="" />
+							<img class="dsm0" src="./assets/img/about/2.jpg" alt="" />
 							<img src="./assets/img/about/3.jpg" alt="" />
 						</div>
 					</div>
