--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 		<!-- Start Navbar -->
 		<nav>
 			<div class="container">
-				<a href="index.html" class="navlogo">AU Code</a>
+				<a href="index.html" class="navlogo"
+					><img src="./assets/img/Logo.png" alt=""
+				/></a>
 				<div id="menu-btn" class="mobile-icon">
 					<i class="fas fa-bars"></i>
 				</div>
@@ -91,7 +93,7 @@
 					</h3>
 				</div>
 				<div class="row">
-					<div class="col-md-6 wow bounceInLeft">
+					<div class="col-lg-6 wow bounceInLeft">
 						<p>
 							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet,
 							corporis quibusdam tempora unde magni quam omnis ex incidunt
@@ -103,7 +105,7 @@
 							odit voluptas, sit dolorem laboriosam sequi maxime
 						</p>
 					</div>
-					<div class="col-md-6 wow bounceInRight">
+					<div class="col-lg-6 wow bounceInRight">
 						<div class="images">
 							<img class="dsm0" src="./assets/img/about/1.jpg" alt="" />
 							<img class="dsm0" src="./assets/img/about/2.jpg" alt="" />
@@ -178,8 +180,8 @@
 				</div>
 
 				<div class="category-list">
-					<ul>
-						<li class="active wow fadeInUp">
+					<ul class="wow fadeInUp">
+						<li class="active">
 							<i class="fas fa-home" data-value="2"></i>
 							<p>2 Rooms</p>
 						</li>
@@ -206,9 +208,9 @@
 					</ul>
 				</div>
 
-				<div class="category-items">
+				<div class="category-items wow fadeInUp">
 					<!-- First Apartment -->
-					<div class="item apartment wow bounceInLeft">
+					<div class="item apartment">
 						<div class="img-container">
 							<div class="glider-contain">
 								<button class="glider-cont-prev2 glider-prev2">
@@ -269,7 +271,7 @@
 					</div>
 
 					<!-- Second Apartment -->
-					<div class="item apartment wow bounceInRight">
+					<div class="item apartment">
 						<div class="img-container">
 							<div class="glider-contain">
 								<button class="glider-cont-prev2 glider-prev3">
@@ -330,7 +332,7 @@
 					</div>
 
 					<!-- Third Apartment -->
-					<div class="item apartment wow bounceInLeft">
+					<div class="item apartment">
 						<div class="img-container">
 							<div class="glider-contain">
 								<button class="glider-cont-prev2 glider-prev4">
@@ -391,7 +393,7 @@
 					</div>
 
 					<!-- Fourth Apartment -->
-					<div class="item apartment wow bounceInRight">
+					<div class="item apartment">
 						<div class="img-container">
 							<div class="glider-contain">
 								<button class="glider-cont-prev2 glider-prev5">
@@ -452,7 +454,7 @@
 					</div>
 
 					<!-- Fifth Apartment -->
-					<div class="item apartment wow bounceInLeft">
+					<div class="item apartment">
 						<div class="img-container">
 							<div class="glider-contain">
 								<button class="glider-cont-prev2 glider-prev6">
@@ -524,7 +526,7 @@
 				</div>
 
 				<div class="category-list">
-					<ul>
+					<ul class="wow fadeInUp">
 						<li class="active" data-value="2">
 							<i class="fas fa-home"></i>
 							<p>2 Rooms</p>
@@ -552,9 +554,9 @@
 					</ul>
 				</div>
 
-				<div class="category-items">
+				<div class="category-items wow fadeInUp">
 					<!-- First Villa -->
-					<div class="item villa wow bounceInRight">
+					<div class="item villa">
 						<div class="img-container">
 							<div class="glider-contain">
 								<button class="glider-cont-prev2 glider-prev7">
@@ -615,7 +617,7 @@
 					</div>
 
 					<!-- Second Villa -->
-					<div class="item villa wow bounceInLeft">
+					<div class="item villa">
 						<div class="img-container">
 							<div class="glider-contain">
 								<button class="glider-cont-prev2 glider-prev8">
@@ -676,7 +678,7 @@
 					</div>
 
 					<!-- Third Villa -->
-					<div class="item villa wow bounceInRight">
+					<div class="item villa">
 						<div class="img-container">
 							<div class="glider-contain">
 								<button class="glider-cont-prev2 glider-prev9">
@@ -737,7 +739,7 @@
 					</div>
 
 					<!-- Fourth Villa -->
-					<div class="item villa wow bounceInLeft">
+					<div class="item villa">
 						<div class="img-container">
 							<div class="glider-contain">
 								<button class="glider-cont-prev2 glider-prev10">
@@ -798,7 +800,7 @@
 					</div>
 
 					<!-- Fifth Villa -->
-					<div class="item villa wow bounceInRight">
+					<div class="item villa">
 						<div class="img-container">
 							<div class="glider-contain">
 								<button class="glider-cont-prev2 glider-prev11">
